sign in  and  my information  pages

--- a/sign-in.html
+++ b/sign-in.html
@@ -14,6 +14,12 @@
 
 <div class="container">
     <div class="sign-in-page">
+        <div class="logo">
+            <a href="#">
+                <svg width="216" height="61"><use href="#LOGO"></use></svg>
+            </a>
+        </div>
+
         <div class="welcome-img">
             <svg><use href="#welcome-img"></use></svg>
         </div>
@@ -24,14 +30,14 @@
         </div>
 
         <form action="#" class="sign-in-form">
-            <div class="mb-10">
+            <div class="mb-20">
                 <div class="d-flex justify-between input-text">
                     <span>Адрес электронной почты</span>
                     <small class="color-red">Такого email не существует</small>
                 </div>
                 <input type="email" class="input" value="arkhypenko@gmail.com">
             </div>
-            <div class="mb-20">
+            <div class="mb-30">
                 <div class="d-flex justify-between input-text">
                     <span>Пароль</span>
                     <a href="#" class="small">Забыли пароль?</a>
@@ -39,7 +45,7 @@
                 <input type="password" class="input" placeholder="">
             </div>
 
-            <button class="btn btn--yellow" type="submit">
+            <button class="btn btn--yellow mb-10" type="submit">
                 <span>войти</span>
                 <svg width="5" height="9"><use href="#i-arrow"></use></svg>
             </button>
