first mobile pages

--- a/create-account.html
+++ b/create-account.html
@@ -14,20 +14,24 @@
 
 <div class="container">
     <div class="create-account-page">
+        <div class="welcome-img mb-25">
+            <svg width="220" height="190"><use href="#welcome-img"></use></svg>
+        </div>
+
         <div class="start-buttons">
             <a href="#" class="btn-start ">войти</a>
             <a href="#" class="btn-start active">создать аккаунт</a>
         </div>
 
         <form action="#" class="sign-in-form">
-            <div class="mb-10">
+            <div class="mb-20">
                 <div class="d-flex justify-between input-text">
                     <span>Адрес электронной почты</span>
                     <small class="color-red">Такого email не существует</small>
                 </div>
                 <input type="email" class="input" placeholder="">
             </div>
-            <div class="mb-10 input-group">
+            <div class="mb-20 input-group">
                 <div class="input-group__item">
                     <span class="input-text">Фамилия</span>
                     <input type="text" class="input">
@@ -37,14 +41,14 @@
                     <input type="text" class="input">
                 </div>
             </div>
-            <div class="mb-10">
+            <div class="mb-20">
                 <div class="d-flex justify-between input-text">
                     <span>Пароль</span>
                     <small class="color-ac">8 символов или более</small>
                 </div>
                 <input type="password" class="input" placeholder="">
             </div>
-            <label class="checkbox mb-18">
+            <label class="checkbox mb-20">
                 <input type="checkbox" class="input-hide">
                 <span class="checkbox__icon">
                     <svg width="10" height="8"><use href="#i-check"></use></svg>
@@ -58,8 +62,8 @@
             </button>
 
             <div class="form-copyright">
-                <p class="small">Создавая личный кабинет, вы соглашаетесь<br>
-                    с нашими <a href="#">Условиями использования</a> & <a href="#">Политикой<br> Конфиденциальности</a></p>
+                <p class="small">Создавая личный кабинет, вы соглашаетесь
+                    с нашими<br> <a href="#">Условиями использования</a> & <a href="#">Политикой Конфиденциальности</a></p>
             </div>
 
         </form>
