--- a/edit-password.html
+++ b/edit-password.html
@@ -13,23 +13,23 @@
 </div>
 
 <div class="container menu-padding">
-    <div class="my-information-page">
+    <div class="pt-30">
         <div class="small-logo">
             <img class="small-logo__img" src="./img/logo-mini.png" alt="">
             <p class="title">Изменить пароль</p>
         </div>
-        <p class="text mb-15">Вы в любой момент можете изменить ваш пароль, чтобы обеспечить
+        <p class="text mb-20">Вы в любой момент можете изменить ваш пароль, чтобы обеспечить
             безопасность вашей учетной записи</p>
 
         <form action="#" class="mb-20">
-            <div class="mb-10">
+            <div class="mb-20">
                 <div class="d-flex justify-between input-text">
                     <span>Текущий пароль</span>
                 </div>
                 <input type="password" class="input">
             </div>
 
-            <div class="mb-10">
+            <div class="mb-20">
                 <div class="d-flex justify-between input-text">
                     <span>Новый пароль</span>
                     <small class="color-ac">8 символов или более</small>
@@ -37,7 +37,7 @@
                 <input type="password" class="input" placeholder="">
             </div>
 
-            <label class="checkbox mb-18">
+            <label class="checkbox mb-20">
                 <input type="checkbox" class="input-hide">
                 <span class="checkbox__icon">
                     <svg width="10" height="8"><use href="#i-check"></use></svg>
@@ -62,42 +62,42 @@
             <ul class="menu__list reset-list">
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="20" height="19">
+                        <svg width="29" height="27">
                             <use href="#i-home"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="20" height="21">
+                        <svg width="29" height="31">
                             <use href="#i-box"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="25" height="16">
+                        <svg width="36" height="23">
                             <use href="#i-delivery"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="23" height="17">
+                        <svg width="33" height="25">
                             <use href="#i-referal"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="23" height="16">
+                        <svg width="33" height="23">
                             <use href="#i-message"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="18" height="18">
+                        <svg width="26" height="26">
                             <use href="#i-menu"></use>
                         </svg>
                     </a>
