--- a/home.html
+++ b/home.html
@@ -14,35 +14,35 @@
 
 <div class="container menu-padding">
     <div class="home-page">
-        <div class="logo">
-            <a href="#"><img src="img/logo.png" alt=""></a>
+        <div class="logo mb-25">
+            <a href="#"><svg width="177" height="50"><use href="#LOGO"></use></svg></a>
         </div>
 
-        <div class="user mb-20">
+        <div class="user mb-30">
             <img class="user__img" src="img/user.png" alt="">
             <div class="user__content">
                 <div class="user__name">
                     <strong>Юлия Архипенко</strong>
-                    <a href="#">
-                        <svg width="16" height="15"><use href="#i-edit"></use></svg>
+                    <a href="#" class="icon-btn">
+                        <svg width="15" height="15"><use href="#i-edit"></use></svg>
                     </a>
                 </div>
                 <a href="mailto:arkhypenko@gmail.com">arkhypenko@gmail.com</a>
             </div>
         </div>
 
-        <div class="wallet mb-30">
+        <div class="wallet">
             <div class="wallet__money">
                 <strong>9 425 187</strong>₽
             </div>
-            <a href="#" class="btn btn--yellow btn--sm btn--auto">
+            <a href="#" class="btn btn--yellow btn--auto">
                 <span>пополнить</span>
                 <svg width="5" height="9"><use href="#i-arrow"></use></svg>
             </a>
         </div>
 
         <div>
-            <a href="#" class="btn btn--outline mb-10">
+            <a href="#" class="btn btn--outline mb-18">
                 <span>Оформить заказ на выкуп</span>
                 <svg width="5" height="9"><use href="#i-arrow"></use></svg>
             </a>
@@ -58,43 +58,42 @@
             <ul class="menu__list reset-list">
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="20" height="19">
+                        <svg width="29" height="27">
                             <use href="#i-home"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="20" height="21">
+                        <svg width="29" height="31">
                             <use href="#i-box"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="25" height="16">
+                        <svg width="36" height="23">
                             <use href="#i-delivery"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="23" height="17">
+                        <svg width="33" height="25">
                             <use href="#i-referal"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="23" height="16">
+                        <svg width="33" height="23">
                             <use href="#i-message"></use>
                         </svg>
-                        <span class="menu__warning"></span>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a href="#" class="menu__link">
-                        <svg width="18" height="18">
+                        <svg width="26" height="26">
                             <use href="#i-menu"></use>
                         </svg>
                     </a>
