--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
     <li>
         <a href="my-address.html">Мои адреса</a>
     </li>
+    <li>
+        <a href="transaction-history.html">история транзакций</a>
+    </li>
+    <li>
+        <a href="not-transaction-history.html">пустая страница транзакции</a>
+    </li>
+    <li>
+        <a href="messages.html">Сообщения</a>
+    </li>
 </ul>
 
 </body>
