--- a/not-transaction-history.html
+++ b/not-transaction-history.html
@@ -16,72 +16,18 @@
     <div class="pt-30">
         <div class="small-logo">
             <img class="small-logo__img" src="./img/logo-mini.png" alt="">
-            <p class="title">Промокоды</p>
+            <p class="title">История транзакций личного кабинета</p>
         </div>
+        <p class="text mb-20">В данном разделе отображены все операции по Вашим счетам.
+            Для получения подробной информации по каждой транзакции нажмите
+            на интересующую Вас операцию. Для быстрой навигации воспользуйтесь
+            фильтром и поиском.</p>
 
-        <p class="text mb-20">Если у Вас есть промокод, активируйте его здесь:</p>
-
-        <form action="#" class="mb-30">
-            <div class="d-flex">
-                <div class="grow-1 mr-20">
-                    <input type="password" class="input input--muted" placeholder="Введите промокод">
-                </div>
-                <button class="btn btn--yellow btn--auto mb-0" type="submit">
-                    <span>сохранить</span>
-                    <svg width="5" height="9"><use href="#i-arrow"></use></svg>
-                </button>
-            </div>
-        </form>
-
-        <hr class="clear-line">
-
-        <table class="table pt-20 pb-25">
-            <tbody>
-            <tr>
-                <td>Наименование промокода:</td>
-                <td class="text-uppercase">СТАРТ</td>
-            </tr>
-            <tr>
-                <td>Действие:</td>
-                <td>1 000 руб.</td>
-            </tr>
-            <tr>
-                <td>Статус:</td>
-                <td>Активирован</td>
-            </tr>
-            <tr>
-                <td colspan="2">Условия использования:</td>
-            </tr>
-            <tr>
-                <td colspan="2">Совершите заказ на “Выкуп товаров с китайских сайтов” на сумму от 2 000 руб.</td>
-            </tr>
-            </tbody>
-        </table>
-
-        <hr class="clear-line clear-line--sm">
-
-        <table class="table pt-20 pb-25">
-            <tbody>
-            <tr>
-                <td>Наименование промокода:</td>
-                <td class="text-uppercase">СТАРТ</td>
-            </tr>
-            <tr>
-                <td>Действие:</td>
-                <td>1 000 руб.</td>
-            </tr>
-            <tr>
-                <td>Статус:</td>
-                <td>Активирован</td>
-            </tr>
-            <tr>
-                <td colspan="2">Условия использования:</td>
-            </tr>
-            <tr>
-                <td colspan="2">Совершите заказ на “Выкуп товаров с китайских сайтов” на сумму от 2 000 руб.</td>
-            </tr>
-            </tbody>
-        </table>
+        <!--    нет операций   -->
+        <div class="mb-40 pt-20 transactions-not-result text-center">
+            <img class="mb-20" width="195" height="200" src="./img/not-result.png" alt="">
+            <p class="text">У Вас еще нет операций</p>
+        </div>
 
         <nav class="menu">
             <ul class="menu__list reset-list">
