--- a/sign-in.html
+++ b/sign-in.html
@@ -14,14 +14,8 @@
 
 <div class="container">
     <div class="sign-in-page">
-        <div class="logo">
-            <a href="#">
-                <svg width="216" height="61"><use href="#LOGO"></use></svg>
-            </a>
-        </div>
-
-        <div class="welcome-img">
-            <svg><use href="#welcome-img"></use></svg>
+        <div class="welcome-img mb-25">
+            <svg width="220" height="190"><use href="#welcome-img"></use></svg>
         </div>
 
         <div class="start-buttons">
@@ -30,7 +24,7 @@
         </div>
 
         <form action="#" class="sign-in-form">
-            <div class="mb-20">
+            <div class="mb-25">
                 <div class="d-flex justify-between input-text">
                     <span>Адрес электронной почты</span>
                     <small class="color-red">Такого email не существует</small>
