second mobile pages

--- a/edit-password.html
+++ b/edit-password.html
@@ -15,9 +15,10 @@
 <div class="container menu-padding">
     <div class="pt-30">
         <div class="small-logo">
-            <img class="small-logo__img" src="./img/logo-mini.png" alt="">
+            <svg width="13" height="15"><use href="#logo-sm"></use></svg>
             <p class="title">Изменить пароль</p>
         </div>
+
         <p class="text mb-20">Вы в любой момент можете изменить ваш пароль, чтобы обеспечить
             безопасность вашей учетной записи</p>
 
