--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
     <li>
         <a href="messages.html">Сообщения</a>
     </li>
+    <li>
+        <a href="buyback-orders.html">Заказы на выкуп (Модалное окно)</a>
+    </li>
+    <li>
+        <a href="order-created.html">Ваш заказ успешно создан</a>
+    </li>
+    <li>
+        <a href="referral-program.html">Реферальная программа</a>
+    </li>
+    <li>
+        <a href="order-list.html">Список заказов</a>
+    </li>
+    <li>
+        <a href="redactor-orders.html">Посмотреть и изменить неоплаченный заказ</a>
+    </li>
+    <li>
+        <a href="manager-orders.html">менеджер заказов</a>
+    </li>
 </ul>
 
 </body>
