--- a/not-transaction-history.html
+++ b/not-transaction-history.html
@@ -15,8 +15,8 @@
 <div class="container menu-padding">
     <div class="pt-30">
         <div class="small-logo">
-            <img class="small-logo__img" src="./img/logo-mini.png" alt="">
-            <p class="title">История транзакций личного кабинета</p>
+            <svg width="13" height="15"><use href="#logo-sm"></use></svg>
+            <p class="title">История транзакций</p>
         </div>
         <p class="text mb-20">В данном разделе отображены все операции по Вашим счетам.
             Для получения подробной информации по каждой транзакции нажмите
