--- a/promocode.html
+++ b/promocode.html
@@ -15,7 +15,7 @@
 <div class="container menu-padding">
     <div class="pt-30">
         <div class="small-logo">
-            <img class="small-logo__img" src="./img/logo-mini.png" alt="">
+            <svg width="13" height="15"><use href="#logo-sm"></use></svg>
             <p class="title">Промокоды</p>
         </div>
 
